api-app-chart/templates/gatekeeper-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNonRootSA
metadata:
  name: non-default-sa-nonroot
  annotations:
    "helm.sh/hook": post-install
    "helm.sh/hook-delete-policy": before-hook-creation
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
