api-app-chart/templates/gatekeeper-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirednonrootsa
  annotations:
    "helm.sh/hook": post-install
    "helm.sh/hook-delete-policy": before-hook-creation
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredNonRootSA
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirednonrootsa

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"
          sa := input.review.object.spec.template.spec.serviceAccountName
          sa == "default"
          msg := "Default service account is not allowed."
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"
          container := input.review.object.spec.template.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container '%v' must set runAsNonRoot to true.", [container.name])
        }
